<resources>
    <string name="app_name">AndroidNanodegree</string>

    <string name="action_settings">Settings</string>

    <string name="main_app_menu_title">My Nanodegree Apps!</string>
    <string name="app_button_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="app_button_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="app_button_xyz_reader">XYZ READER</string>
    <string name="app_button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="app_button_library_app">LIBRARY APP</string>
    <string name="app_button_football_scores">SCORES APP</string>
    <string name="spotify_streamer_app_button_hint">This button will launch spotify streamer app!</string>
    <string name="football_scores_app_button_hint">This button will launch football scores app!</string>
    <string name="library_app_button_hint">This button will launch library app!</string>
    <string name="build_it_bigger_app_button_hint">This button will launch build it bigger app!</string>
    <string name="xyz_reader_app_button_hint">This button will launch XYZ reader app!</string>
    <string name="my_own_app_button_hint">This button will launch my own app!</string>
</resources>
