<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:gravity="center_horizontal">

    <TextView
        android:text="@string/main_app_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/app_button_spotify_streamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_button_spotify_streamer"
        android:minWidth="200dp"
        android:layout_marginTop="20dp"
        android:background="@color/app_button_practice_app"/>

    <Button
        android:id="@+id/app_button_football_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_button_football_scores"
        android:minWidth="200dp"
        android:layout_marginTop="8dp"
        android:background="@color/app_button_practice_app"/>

    <Button
        android:id="@+id/app_button_library_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_button_library_app"
        android:minWidth="200dp"
        android:layout_marginTop="8dp"
        android:background="@color/app_button_practice_app"/>

    <Button
        android:id="@+id/app_button_build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_button_build_it_bigger"
        android:minWidth="200dp"
        android:layout_marginTop="8dp"
        android:background="@color/app_button_practice_app"/>

    <Button
        android:id="@+id/app_button_xyz_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_button_xyz_reader"
        android:minWidth="200dp"
        android:layout_marginTop="8dp"
        android:background="@color/app_button_practice_app"/>

    <Button
        android:id="@+id/app_button_my_own_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_button_my_own_app"
        android:minWidth="200dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:background="@color/app_button_my_own_app"/>

</LinearLayout>
